--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 PARA DESCARGAR EL PROYECTO:
 
 git clone https://github.com/miguel-es/jacub.git
-git checkout origin alt_development
+git checkout alt_development
 
 FIN DE INSTRUCCIONES PARA DESCARGAR PROYECTO 
 
